--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 
 
   <footer class="footer">
-    <div id="footer_div"><img src="images/IMG_5117.PNG" alt="Spoody Glasses" id="wdr"> <span
+    <div id="footer_div"><img src="images/IMG_5117.png" alt="Spoody Glasses" id="wdr"> <span
         class="spoody_span">SPOODY</div>
     <p id="footer_text">Made with 
       <svg xmlns="http://www.w3.org/2000/svg" width="25" height="23" viewBox="0 0 25 23" fill="none">
